update the permissions of the project

--- a/templates/settings/employee/cards.html
+++ b/templates/settings/employee/cards.html
@@ -2,28 +2,44 @@
   <div class="h-28 rounded bg-gray-50 dark:bg-gray-800 border-l-4 border-green-500 p-4">
     <span class="text-green-500 font-bold text-xl ">Online</span>
     <span class="flex justify-between items-center text-white  pt-4 px-2">
+      {% if request.user.is_superuser %}
+      <p class="text-xl">{{ admin_online }}</p>
+      {% else %}
       <p class="text-xl">{{ online }}</p>
+      {% endif %}
       <i class="text-2xl fa-solid fa-signal-bars"></i>
     </span>
   </div>
   <div class="h-28 rounded bg-gray-50 dark:bg-gray-800 border-l-4 border-green-500 p-4">
     <span class="text-green-500 font-bold text-xl ">Active</span>
     <span class="flex justify-between items-center text-white  pt-4 px-2">
+      {% if request.user.is_superuser %}
+      <p class="text-xl">{{ admin_active }}</p>
+      {% else %}
       <p class="text-xl">{{ active }}</p>
+      {% endif %}
       <i class="text-2xl fa-solid fa-check"></i>
     </span>
   </div>
   <div class="h-28 rounded bg-gray-50 dark:bg-gray-800 border-l-4 border-red-500 p-4">
     <span class="text-red-500 font-bold text-xl ">Offline</span>
     <span class="flex justify-between items-center text-white  pt-4 px-2">
+      {% if request.user.is_superuser %}
+      <p class="text-xl">{{ admin_offline }}</p>
+      {% else %}
       <p class="text-xl">{{ offline }}</p>
+      {% endif %}
       <i class="text-2xl fa-solid fa-signal-slash"></i>
     </span>
   </div>
   <div class="h-28 rounded bg-gray-50 dark:bg-gray-800 border-l-4 border-red-500 p-4">
     <span class="text-red-500 font-bold text-xl ">Inactive</span>
     <span class="flex justify-between items-center text-white  pt-4 px-2">
+      {% if request.user.is_superuser %}
+      <p class="text-xl">{{ admin_inactive }}</p>
+      {% else %}
       <p class="text-xl">{{ inactive }}</p>
+      {% endif %}
       <i class="text-2xl fa-solid fa-xmark"></i>
     </span>
   </div>
