--- a/static/src/output.css
+++ b/static/src/output.css
@@ -1244,6 +1244,10 @@ input:checked + .toggle-bg {
   margin-top: 1.25rem;
 }
 
+.me-4 {
+  margin-inline-end: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -2466,6 +2470,10 @@ input:checked + .toggle-bg {
     background-color: rgb(200 30 30 / var(--tw-bg-opacity));
   }
 
+  .dark\:font-semibold {
+    font-weight: 600;
+  }
+
   .dark\:text-blue-500 {
     --tw-text-opacity: 1;
     color: rgb(63 131 248 / var(--tw-text-opacity));
@@ -2544,6 +2552,21 @@ input:checked + .toggle-bg {
   .dark\:hover\:bg-green-700:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(4 108 78 / var(--tw-bg-opacity));
+  }
+
+  .dark\:hover\:bg-red-600:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(224 36 36 / var(--tw-bg-opacity));
+  }
+
+  .dark\:hover\:bg-red-400:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(249 128 128 / var(--tw-bg-opacity));
+  }
+
+  .dark\:hover\:bg-red-800:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(155 28 28 / var(--tw-bg-opacity));
   }
 
   .dark\:hover\:text-blue-500:hover {
