--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                 <form action="{% url 'logout' %}" method="post" >
                   {% csrf_token %}
                   <button type="submit" class="flex w-full items-top p-2 text-gray-900 rounded-lg 
-                    dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+                    dark:text-white hover:bg-gray-100 dark:hover:bg-red-800 group">
                       <span class="inline-block w-5 h-5 text-gray-500 transition duration-75 
                         dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
                           <i class="text-xl fa-solid fa-right-from-bracket"></i>
