--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -20,7 +20,7 @@
               focus:ring-offset-4 focus:ring-offset-gray-900 " aria-expanded="false" 
               data-dropdown-toggle="dropdown-user">
               {% if user.is_authenticated %}
-              <span class="sr-only">Open user menu</span>
+              <span class="text-white text-lg font-semibold me-4">{{ request.user.username }}</span>
               <i class="text-2xl rounded-full fas fa-user-alt" style="color: #FFF;"></i>
               {% endif %}
             </button>
@@ -28,11 +28,11 @@
           <div class="z-50 hidden my-4 text-base list-none bg-white 
             divide-y divide-gray-100 rounded shadow dark:bg-gray-700 dark:divide-gray-600" id="dropdown-user">
             <div class="px-4 py-3" role="none">
-              <p class="text-sm text-gray-900 dark:text-white" role="none">
-                Neil Sims
+              <p class="text-sm text-gray-900 dark:text-white dark:font-semibold mb-1" role="none">
+                {{ request.user.first_name }} {{ request.user.last_name }}
               </p>
               <p class="text-sm font-medium text-gray-900 truncate dark:text-gray-300" role="none">
-                neil.sims@flowbite.com
+                {{ request.user.email }}
               </p>
             </div>
             <ul class="py-1" role="none">
@@ -40,7 +40,7 @@
                 <form action="{% url 'logout' %}" method="post">
                     {% csrf_token %}
                     <button type="submit" class="block w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 
-                      dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">Logout</button>
+                      dark:text-gray-300 dark:hover:bg-red-800 dark:hover:text-white" role="menuitem">Logout</button>
                 </form>
               </li>
 
