--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -25,6 +25,7 @@
               {% endif %}
             </button>
           </div>
+          {% if user.is_authenticated %}
           <div class="z-50 hidden my-4 text-base list-none bg-white 
             divide-y divide-gray-100 rounded shadow dark:bg-gray-700 dark:divide-gray-600" id="dropdown-user">
             <div class="px-4 py-3" role="none">
@@ -36,16 +37,28 @@
               </p>
             </div>
             <ul class="py-1" role="none">
+              <li class="cursor-pointer">
+                <a
+                  _="on click go to url '/settings'"
+                  hx-trigger="load"
+                  hx-get="{% url 'employee_detail' request.user.id %}"
+                  hx-target="#settings_content"
+                  hx-swap="innerHtml"
+                  class="flex justify-center w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 
+                  dark:hover:bg-gray-600 dark:hover:text-white" >
+                  Profile
+                </a>
+              </li>
               <li>
                 <form action="{% url 'logout' %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit" class="block w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 
-                      dark:text-gray-300 dark:hover:bg-red-800 dark:hover:text-white" role="menuitem">Logout</button>
+                  {% csrf_token %}
+                  <button type="submit" class="block w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 
+                    dark:text-gray-300 dark:hover:bg-red-800 dark:hover:text-white" role="menuitem">Logout</button>
                 </form>
               </li>
-
             </ul>
           </div>
+          {% endif %}
         </div>
       </div>
     </div>
