fix some frontend problems

--- a/templates/settings/employee/tabs/deduction.html
+++ b/templates/settings/employee/tabs/deduction.html
@@ -7,7 +7,7 @@
     <div class="flex justify-center items-center mb-2 rounded-t-lg bg-gray-700">
       <p class="text-white text-lg m-2"> Deduction </p>
     </div>
-    <div class="relative overflow-x-auto shadow-lg m-5 sm:rounded-lg" style="max-height: 33rem">
+    <div class="relative overflow-x-auto p-5 sm:rounded-lg" style="max-height: 33rem">
       {% include "settings/employee/tables/deduction_table.html" %}
     </div>
     {% if perms.accounts.change_userprofile %}
