--- a/templates/settings/employee/tables/deduction_table.html
+++ b/templates/settings/employee/tables/deduction_table.html
@@ -1,4 +1,4 @@
-<table class="w-full truncate text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+<table class="w-full truncate text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 shadow-lg rounded-lg">
   <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
     <tr>
       <th scope="col" class="px-6 py-3">Name</th>
