update the table url effect

--- a/templates/settings/employee/tables/table.html
+++ b/templates/settings/employee/tables/table.html
@@ -18,12 +18,13 @@
         {% for user in userprofile_list %}
         <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
           <th scope="row" class="px-6 py-4 text-base">{{ user.user.id }}</th>
-          <td  class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white text-lg">
+          <td  class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white text-lg ">
             <div 
               hx-get="{% url "employee_detail" user.id %}"
               hx-target="#settings_content"
               hx-trigger="click"
               hx-swap="innerHtml"
+              class="hover:font-bold hover:underline"
               style="cursor: pointer;">{{ user.user.username }}
             </div>
           </td>
