create the attribute CRU and its table

--- a/templates/settings/inventory/inventory.html
+++ b/templates/settings/inventory/inventory.html
@@ -34,11 +34,11 @@
         Category
       </button>
       <button
-        hx-get="{% url 'attributes'%}"
+        hx-get="{% url 'attribute'%}"
         role="tab" aria-controls="tab-contents" aria-selected="false"
         class="px-4 py-2 rounded-lg text-white rounded-b-none hover:bg-gray-500"
         _="on click remove .bg-gray-500 from <button/> in tabs then add .bg-gray-500 on me" >
-        Attributes
+        Attributes & Products
       </button>
       <button
         hx-get="{% url 'product'%}"
