--- a/templates/settings/inventory/inventory.html
+++ b/templates/settings/inventory/inventory.html
@@ -41,18 +41,11 @@
         Attributes & Products
       </button>
       <button
-        hx-get="{% url 'product'%}"
-        role="tab" aria-controls="tab-contents" aria-selected="false"
-        class="px-4 py-2 rounded-lg text-white rounded-b-none hover:bg-gray-500"
-        _="on click remove .bg-gray-500 from .rounded-b-none in tabs then add .bg-gray-500 to me" >
-        Product
-      </button>
-      <button
         hx-get="{% url 'product_line'%}"
         role="tab" aria-controls="tab-contents" aria-selected="false"
         class="px-4 py-2 rounded-lg text-white rounded-b-none hover:bg-gray-500"
         _="on click remove .bg-gray-500 from .rounded-b-none in tabs then add .bg-gray-500 to me" >
-        Product_Line
+        Product_value & Product_Line
       </button>
     </div>
     <div id="tab-contents"
