--- a/templates/settings/inventory/tables/category_table.html
+++ b/templates/settings/inventory/tables/category_table.html
@@ -10,7 +10,13 @@
     {% for category in category_list %}
     <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800">
       <td class="px-6 py-4 text-base">{{ category.name }}</td>
-      <td class="px-6 py-4 text-base">{{ category.is_active }}</td>
+      <td class="px-6 py-4 text-base">
+        {% if category.is_active %}
+        <span class="bg-red-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-green-600 dark:text-gray-100">Active</span>
+        {% else %}
+        <span class="bg-red-100 text-red-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-red-700 dark:text-gray-100">Inactive</span>
+        {% endif %}
+      </td>
       <td class="px-6 py-4 text-base">
         <a 
           hx-get="{% url 'edit_category' category.id %}"
