--- a/templates/settings/inventory/tables/product_line_table.html
+++ b/templates/settings/inventory/tables/product_line_table.html
@@ -18,7 +18,13 @@
       <td class="px-3 py-4 text-base">{{ product_line.price }}</td>
       <td class="px-3 py-4 text-base">{{ product_line.stock_qty }}</td>
       <td class="px-3 py-4 text-base">{{ product_line.min_stock_qty }}</td>
-      <td class="px-3 py-4 text-base">{{ product_line.is_active }}</td>
+      <td class="px-6 py-4 text-base">
+        {% if product_line.is_active %}
+        <span class="bg-red-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-green-600 dark:text-gray-100">Active</span>
+        {% else %}
+        <span class="bg-red-100 text-red-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-red-700 dark:text-gray-100">Inactive</span>
+        {% endif %}
+      </td>
       <td class="px-3 py-4 text-base">
         <a 
           hx-get="{% url 'edit_product_line' product_line.id %}"
