--- a/templates/settings/inventory/tables/category_table.html
+++ b/templates/settings/inventory/tables/category_table.html
@@ -17,21 +17,23 @@
         <span class="bg-red-100 text-red-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-red-700 dark:text-gray-100">Inactive</span>
         {% endif %}
       </td>
-      <td class="px-6 py-4 text-base space-x-2">
-        <a 
-          hx-get="{% url 'edit_category' category.id %}"
-          hx-target="#modal_form"
-          hx-swap="innerHtml"
-          _="on click remove .hidden from modal_div"
-          class="cursor-pointer hover:text-blue-700">
-          <i class="fa-solid fa-pen-to-square"></i>
-        </a>
-        <a 
-          hx-post="{% url 'delete_category' category.id %}"
-          hx-confirm="Are you sure you want to delete this deduction?"
-          class="cursor-pointer hover:text-red-700 ">
-          <i class="fa-solid fa-trash"></i>
-        </a>
+      <td class="px-6 py-4 text-base">
+        <div class="flex gap-5">
+          <a 
+            hx-get="{% url 'edit_category' category.id %}"
+            hx-target="#modal_form"
+            hx-swap="innerHtml"
+            _="on click remove .hidden from modal_div"
+            class="cursor-pointer hover:text-blue-700">
+            <i class="fa-solid fa-pen-to-square"></i>
+          </a>
+          <a 
+            hx-post="{% url 'delete_category' category.id %}"
+            hx-confirm="Are you sure you want to delete this deduction?"
+            class="cursor-pointer hover:text-red-700 ">
+            <i class="fa-solid fa-trash"></i>
+          </a>
+        </div>
       </td>
     </tr>
     {% endfor %}
