--- a/templates/settings/inventory/tables/sub_category_table.html
+++ b/templates/settings/inventory/tables/sub_category_table.html
@@ -20,14 +20,22 @@
         {% endif %}
       </td>
       <td class="px-6 py-4 text-base">
-        <a 
-          hx-get="{% url 'edit_sub_category' sub_category.id %}"
-          hx-target="#modal_form"
-          hx-swap="innerHtml"
-          _="on click remove .hidden from modal_div"
-          class="cursor-pointer hover:text-blue-700">
-          <i class="fa-solid fa-pen-to-square"></i>
-        </a>
+        <div class="flex gap-5">
+          <a 
+            hx-get="{% url 'edit_sub_category' sub_category.id %}"
+            hx-target="#modal_form"
+            hx-swap="innerHtml"
+            _="on click remove .hidden from modal_div"
+            class="cursor-pointer hover:text-blue-700">
+            <i class="fa-solid fa-pen-to-square"></i>
+          </a>
+          <a 
+            hx-post="{% url 'delete_sub_category' sub_category.id %}"
+            hx-confirm="Are you sure you want to delete this deduction?"
+            class="cursor-pointer hover:text-red-700 ">
+            <i class="fa-solid fa-trash"></i>
+          </a>
+        </div>
       </td>
     </tr>
     {% endfor %}
