--- a/templates/settings/inventory/tables/attribute_table.html
+++ b/templates/settings/inventory/tables/attribute_table.html
@@ -2,7 +2,7 @@
   <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
     <tr>
       <th scope="col" class="px-3 py-3">Name</th>
-      <th scope="col" class="px-3 py-3">Description</th>
+      <th scope="col" class="px-3 py-3">Desc</th>
       <th scope="col" class="px-3 py-3">Action</th>
     </tr>
   </thead>
@@ -10,7 +10,7 @@
     {% for attribute in attribute_list %}
     <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800">
       <td class="px-3 py-4 text-base">{{ attribute.name }}</td>
-      <td class="px-3 py-4 text-base">{{ attribute.description }}</td>
+      <td class="px-3 py-4 text-base text-ellipsis">{{ attribute.description|slice:"5" }}{% if attribute.description|length > 5 %}...{% endif %}</td>
       <td class="px-3 py-4 text-base">
         <div class="flex gap-5">
           <a 
