--- a/templates/settings/inventory/tables/category_table.html
+++ b/templates/settings/inventory/tables/category_table.html
@@ -2,7 +2,7 @@
   <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
     <tr>
       <th scope="col" class="px-6 py-3">Category</th>
-      <th scope="col" class="px-6 py-3">is_active</th>
+      <th scope="col" class="px-6 py-3">Active</th>
       <th scope="col" class="px-6 py-3">Action</th>
     </tr>
   </thead>
