--- a/templates/settings/inventory/tables/product_table.html
+++ b/templates/settings/inventory/tables/product_table.html
@@ -3,11 +3,11 @@
     <tr>
       <th scope="col" class="px-3 py-3">Procut</th>
       <th scope="col" class="px-3 py-3">Sub_Category</th>
-      <th scope="col" class="px-3 py-3">description</th>
+      <th scope="col" class="px-3 py-3">Desc</th>
       <th scope="col" class="px-3 py-3">Active</th>
-      <th scope="col" class="px-3 py-3">Countable</th>
-      <th scope="col" class="px-3 py-3">Created at</th>
-      <th scope="col" class="px-3 py-3">Updated at</th>
+      <th scope="col" class="px-3 py-3">Count</th>
+      <th scope="col" class="px-3 py-3">Created</th>
+      <th scope="col" class="px-3 py-3">Updated</th>
       <th scope="col" class="px-3 py-3">Action</th>
     </tr>
   </thead>
@@ -16,17 +16,24 @@
     <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800">
       <td class="px-3 py-4 text-base">{{ product.name }}</td>
       <td class="px-3 py-4 text-base">{{ product.sub_category }}</td>
-      <td class="px-3 py-4 text-base">{{ product.description }}</td>
-      <td class="px-6 py-4 text-base">
+      <td class="px-3 py-4 text-base">{{ product.description|slice:"5" }}{% if product.description|length > 5 %}...{% endif %}</td>
+      <td class="px-3 py-4 text-base">
         {% if product.is_active %}
         <span class="bg-red-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-green-600 dark:text-gray-100">Active</span>
         {% else %}
         <span class="bg-red-100 text-red-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-red-700 dark:text-gray-100">Inactive</span>
         {% endif %}
       </td>
-      <td class="px-3 py-4 text-base">{{ product.is_countable }}</td>
-      <td class="px-3 py-4 text-base">{{ product.created_at }}</td>
-      <td class="px-3 py-4 text-base">{{ product.updated_at }}</td>
+      <td class="px-3 py-4 text-base">
+        {% if product.is_countable %}
+          <i class="fa-solid fa-check"></i>
+        {% else %}
+          <i class="fa-solid fa-infinity"></i>
+        {% endif %}
+
+      </td>
+      <td class="px-3 py-4 text-base break-words">{{ product.created_at|date }}</td>
+      <td class="px-3 py-4 text-base break-words">{{ product.updated_at|date }}</td>
       <td class="px-3 py-4 text-base">
         <div class="flex gap-5">
           <a 
