--- a/templates/settings/inventory/tables/sub_category_table.html
+++ b/templates/settings/inventory/tables/sub_category_table.html
@@ -3,7 +3,7 @@
     <tr>
       <th scope="col" class="px-6 py-3">Sub_Category</th>
       <th scope="col" class="px-6 py-3">Category</th>
-      <th scope="col" class="px-6 py-3">is_active</th>
+      <th scope="col" class="px-6 py-3">Active</th>
       <th scope="col" class="px-6 py-3">Action</th>
     </tr>
   </thead>
