--- a/templates/settings/inventory/inventory.html
+++ b/templates/settings/inventory/inventory.html
@@ -1,4 +1,4 @@
-<div class="p-4 sm:ml-64">
+<div class="p-4 md:ml-64">
   <!-- Breadcrumb -->
   <nav class="flex my-2 mt-12 p-4" aria-label="Breadcrumb">
     <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
@@ -21,7 +21,7 @@
       </li>
     </ol>
   </nav>
-  <div class="p-4 pt-10 rounded-lg h-modal px-10 min-w-min">
+  <div class="p-4 rounded-lg h-modal px-10 min-w-min">
     <div
       id="tabs" hx-target="#tab-contents" role="tablist"
       class="flex space-x-4 border-b border-gray-500">
