--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
       </style>
       <aside id="logo-sidebar" 
         class="fixed top-0 left-0 z-40 w-64 h-screen pt-20 transition-transform -translate-x-full 
-        bg-white border-r border-gray-200 sm:translate-x-0 dark:bg-gray-900 dark:border-gray-800" 
+        bg-white border-r border-gray-200 md:translate-x-0 dark:bg-gray-900 dark:border-gray-800" 
         aria-label="Sidebar">
           <div class="h-full px-3 pb-4 overflow-y-auto bg-white dark:bg-gray-900 flex flex-col justify-between ">
             <ul class="space-y-2 font-medium">
