--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -3,7 +3,7 @@
     <div class="flex items-center justify-between">
       <div class="flex items-center justify-start rtl:justify-end">
         <button data-drawer-target="logo-sidebar" data-drawer-toggle="logo-sidebar" aria-controls="logo-sidebar"
-          type="button" class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg sm:hidden 
+          type="button" class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden 
           hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
           <span class="sr-only">Open sidebar</span>
           <i class="fa-solid fa-list-ul text-2xl"></i>
