--- a/templates/settings/employee/employee.html
+++ b/templates/settings/employee/employee.html
@@ -1,4 +1,4 @@
-<div class="p-4 sm:ml-64">
+<div class="p-4 md:ml-64">
   <!-- Breadcrumb -->
   <nav class="flex my-2 mt-12 p-4" aria-label="Breadcrumb">
     <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
