--- a/templates/settings/employee/tabs/log.html
+++ b/templates/settings/employee/tabs/log.html
@@ -1,5 +1,6 @@
 <div class="grid xl:grid-cols-3 gap-10 mt-10">
-  <div class=" bg-gray-800 rounded-lg md:min-w-80">
+  <div
+    class=" bg-gray-800 rounded-lg h-auto max-w-full">
     <div class="flex justify-center items-center mb-2 rounded-t-lg bg-gray-700">
       <p class="text-white text-lg m-2"> Login History </p>
     </div>
@@ -7,7 +8,8 @@
       {% include "settings/employee/tables/login_table.html" %}
     </div>
   </div>
-  <div class="xl:col-span-2 min-w-full bg-gray-800 rounded-lg ">
+  <div
+    class="xl:col-span-2 bg-gray-800 rounded-lg h-auto max-w-full">
     <div class="flex justify-center items-center mb-2 rounded-t-lg bg-gray-700">
       <p class="text-white text-lg m-2"> Actions History </p>
     </div>
