--- a/templates/settings/inventory/tabs/attributes.html
+++ b/templates/settings/inventory/tabs/attributes.html
@@ -2,10 +2,10 @@
   hx-get="{% url 'attribute'%}"
   hx-trigger="attribute_refresh">
   <div
-    class="p-4 pt-10 rounded-lg h-modal">
-    <div class="grid xl:grid-cols-3 gap-10">
+    class="p-4 rounded-lg h-modal">
+    <div class="grid xl:grid-cols-3 gap-5 ">
       <div
-        class=" bg-gray-800 rounded-lg md:min-w-80">
+        class=" bg-gray-800 rounded-lg h-auto max-w-full">
         <div class="flex justify-center items-center mb-2 rounded-t-lg bg-gray-700">
           <p class="text-white text-lg m-2"> Attributes </p>
         </div>
@@ -17,17 +17,17 @@
             _="on click remove .hidden from modal_div " 
             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
             font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 
-            dark:focus:ring-blue-800 my-3" type="button">
+            dark:focus:ring-blue-800" type="button">
             Add
           </button>
         </div>
         <div
-          class="relative overflow-x-auto shadow-lg m-5 sm:rounded-lg ">
+          class="relative overflow-x-auto shadow-lg m-5 sm:rounded-lg" style="max-height: 30rem">
           {% include "settings/inventory/tables/attribute_table.html" %}
         </div>
       </div>
       <div
-        class="xl:col-span-2 min-w-full bg-gray-800 rounded-lg ">
+        class=" bg-gray-800 rounded-lg h-auto max-w-full xl:col-span-2">
         <div class="flex justify-center items-center mb-2 rounded-t-lg bg-gray-700">
           <p class="text-white text-lg m-2"> Products </p>
         </div>
@@ -39,12 +39,12 @@
             _="on click remove .hidden from modal_div " 
             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
             font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 
-            dark:focus:ring-blue-800 my-3" type="button">
+            dark:focus:ring-blue-800" type="button">
             Add
           </button>
         </div>
         <div
-          class="relative overflow-x-auto shadow-lg m-5 sm:rounded-lg ">
+          class="relative overflow-x-auto shadow-lg m-5 sm:rounded-lg" style="max-height: 30rem">
           {% include "settings/inventory/tables/product_table.html" %}
         </div>
     </div>
