--- a/templates/settings/dashboard/tables/product_list_table.html
+++ b/templates/settings/dashboard/tables/product_list_table.html
@@ -7,7 +7,6 @@
       <th scope="col" class="px-3 py-3">Stock</th>
       <th scope="col" class="px-3 py-3">Low Stock</th>
       <th scope="col" class="px-3 py-3">Active</th>
-      <th scope="col" class="px-3 py-3">Action</th>
     </tr>
   </thead>
   <tbody>
@@ -16,32 +15,26 @@
       <td class="px-3 py-4 text-base">{{ product_line.product.name }} ({{ product_line.values }})</td>
       <td class="px-3 py-4 text-base">{{ product_line.product.sub_category }}</td>
       <td class="px-3 py-4 text-base">{{ product_line.price }}</td>
-      <td class="px-3 py-4 text-base">{{ product_line.stock_qty }}</td>
-      <td class="px-3 py-4 text-base">{{ product_line.min_stock_qty }}</td>
+      <td class="px-3 py-4 text-base">
+        {% if product_line.product.is_countable %}
+        <i class="fa-solid fa-infinity"></i>
+        {% else %}
+        {{ product_line.stock_qty }}
+        {% endif %}
+      </td>
+      <td class="px-3 py-4 text-base">
+        {% if product_line.product.is_countable %}
+        <i class="fa-solid fa-infinity"></i>
+        {% else %}
+        {{ product_line.min_stock_qty }}
+        {% endif %}
+      </td>
       <td class="px-3 py-4 text-base">
         {% if product_line.is_active %}
         <span class="bg-red-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-green-600 dark:text-gray-100">Active</span>
         {% else %}
         <span class="bg-red-100 text-red-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-red-700 dark:text-gray-100">Inactive</span>
         {% endif %}
-      </td>
-      <td class="px-3 py-4 text-base">
-        <div class="flex gap-5">
-          <a 
-            hx-get="{% url 'edit_product_line' product_line.id %}"
-            hx-target="#modal_form"
-            hx-swap="innerHtml"
-            _="on click remove .hidden from modal_div"
-            class="cursor-pointer hover:text-blue-700">
-            <i class="fa-solid fa-pen-to-square"></i>
-          </a>
-          <a 
-            hx-post="{% url 'delete_product_line' product_line.id %}"
-            hx-confirm="Are you sure you want to delete this deduction?"
-            class="cursor-pointer hover:text-red-700 ">
-            <i class="fa-solid fa-trash"></i>
-          </a>
-        </div>
       </td>
     </tr>
     {% endfor %}
