--- a/templates/settings/inventory/tables/attribute_value_table.html
+++ b/templates/settings/inventory/tables/attribute_value_table.html
@@ -1,5 +1,5 @@
 <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-  <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+  <thead class="sticky top-0 text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
     <tr>
       <th scope="col" class="px-3 py-3">Value</th>
       <th scope="col" class="px-3 py-3">Attribute</th>
