--- a/templates/settings/dashboard/inventory.html
+++ b/templates/settings/dashboard/inventory.html
@@ -23,19 +23,47 @@
     </ol>
   </nav>
   <div class="p-2 rounded-lg h-full">
-    <div class="grid grid-rows-7 gap-y-5 h-full">
-      <div class=" bg-gray-800 rounded-lg max-w-full row-span-3">
+    <div class="grid grid-cols-2 gap-10 h-full">
+      <div class=" bg-gray-800 rounded-lg max-w-full">
         <div class="flex justify-center items-center mb-2 rounded-t-lg bg-gray-700">
-          <p class="text-white text-lg m-2"> Need To Buy </p>
+          <span class="inline-block text-gray-500 transition duration-75 
+            dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
+            <i class="fa-regular fa-money-bill-wave"></i>
+          </span>
+          <p class="text-white text-lg m-2 mx-4"> Need To Buy </p>
+          <span class="inline-block text-gray-500 transition duration-75 
+            dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
+            <i class="fa-regular fa-money-bill-wave"></i>
+          </span>
         </div>
-        <div class="relative overflow-x-auto shadow-lg m-5 sm:rounded-lg h-56">
+        <div class="relative overflow-x-auto shadow-lg m-5 sm:rounded-lg max-h-[32rem]">
+          {% include "settings/dashboard/tables/to_buy_table.html" %}
         </div>
+        <!--<div class="flex justify-start lg:gap-32 gap-5 mt-10 ps-8">-->
+        <!--  <button -->
+        <!--    hx-target="#modal_form"-->
+        <!--    hx-swap="innerHtml"-->
+        <!--    _="on click remove .hidden from modal_div " -->
+        <!--    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300-->
+        <!--    font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 -->
+        <!--    dark:focus:ring-blue-800 my-3" type="button">-->
+        <!--    Edit-->
+        <!--  </button>-->
+        <!--</div>-->
       </div>
-      <div class=" bg-gray-800 rounded-lg max-w-full row-span-4">
+      <div class=" bg-gray-800 rounded-lg max-w-full">
         <div class="flex justify-center items-center mb-2 rounded-t-lg bg-gray-700">
-          <p class="text-white text-lg m-2"> Products List </p>
+          <span class="inline-block text-gray-500 transition duration-75 
+            dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
+            <i class="fa-solid fa-square-list"></i>
+          </span>
+          <p class="text-white text-lg m-2 mx-5"> Products List </p>
+          <span class="inline-block text-gray-500 transition duration-75 
+            dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
+            <i class="fa-solid fa-square-list"></i>
+          </span>
         </div>
-        <div class="relative overflow-x-auto shadow-lg m-5 sm:rounded-lg h-80">
+        <div class="relative overflow-x-auto shadow-lg m-5 sm:rounded-lg max-h-[32rem]">
           {% include "settings/dashboard/tables/product_list_table.html" %}
         </div>
       </div>
